--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.0.2"
+  },
+  "dependencies": {
+    "scroll-snap": "^3.2.4"
   }
 }
